_**CPANEL bugfixes**_
**User section**
- [x] Bug when making user inactive in user section on STONISH server
- [x] User statistics did not work since the game_download_info table was removed
- [x] Removed the pop up AGAIN from the user admin section as it was just not working correctly. I couldn't get the redirecting after a db modify right and in the end got seriously fed up. The fancy pop has it limitations and gave me too much headaches.
- [x] Removed all the unstable sh*t ajax from the quick_search_user left section. This thing was crashing all the time, the extra functions (like 'sent email' and 'deactivation of user') did not work anymore in it. And most of all, by using the ajax it was almost impossible for me to use this left section in any other pages (as the ajax code requires a 'hotspot' in the html file). So much headaches and all of this just to NOT PRESS a submit button. Don't worry, all original files are in tact (renamed them with the addition 'NOT USED', so if you feel like it one day, re-implement it all, just make it work  ;-) )

**database update section**
- [x] Changed script nr 92 to 'change game_download_info' table. This table is needed in the project as it contains info on who downloaded what. I have added the game_download_id field to it

**database update section**
- [x] removed bug - previous link did not work when changing search date

**technical doc section**
- [x] Update of the download structure + info regarding new game_download_info table
- [x] Technical doc added to top menu
- [x] Alignment issue of CONTENTS box in TOS skin

--- a/Sources/styles/3/scss/_cpanel-admin.scss
+++ b/Sources/styles/3/scss/_cpanel-admin.scss
@@ -52,3 +52,8 @@
 }
 
 #changelog_select select { width: 50%; }
+
+
+
+//*-----------------------Technical doc-------------------------- */
+.tech_doc_contents {margin-left:1em;text-align:left;}
